--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "private": true,
   "name": "ream-workspace",
-  "workspaces": ["packages/*", "website"],
+  "scripts": {
+    "watch": "run-p watch"
+  },
+  "workspaces": [
+    "packages/ream",
+    "packages/ream-server",
+    "packages/@ream/*",
+    "website"
+  ],
   "devDependencies": {
+    "lerna": "^3.20.2",
+    "npm-run-all": "^4.1.5",
     "typescript": "^3.8.3"
   }
 }
