--- a/packages/@ream/common/tsconfig.json
+++ b/packages/@ream/common/tsconfig.json
@@ -1,7 +1,6 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../../tsconfig.json",
   "compilerOptions": {
-    "noEmit": false,
     "outDir": "dist"
   },
   "include": ["src/**/*"]
