--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "ream-workspace",
   "scripts": {
-    "watch": "run-p watch"
+    "build": "lerna run build --ignore website"
   },
   "workspaces": [
     "packages/ream",
@@ -12,7 +12,6 @@
   ],
   "devDependencies": {
     "lerna": "^3.20.2",
-    "npm-run-all": "^4.1.5",
     "typescript": "^3.8.3"
   }
 }
