--- a/packages/ream-server/package.json
+++ b/packages/ream-server/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "watch": "tsc --watch"
+    "watch": "tsc --watch",
+    "test": "echo lol"
   },
   "license": "MIT",
   "dependencies": {
