--- a/packages/ream-server/package.json
+++ b/packages/ream-server/package.json
@@ -10,6 +10,12 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@ream/common": "0.0.0"
+    "@ream/common": "0.0.0",
+    "vue": "^2.6.11",
+    "vue-server-renderer": "^2.6.11",
+    "vue-meta": "^2.3.3",
+    "vue-router": "^3.1.6",
+    "devalue": "^2.0.1",
+    "express": "^4.17.1"
   }
 }
