--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "esModuleInterop": true,
       "moduleResolution": "node",
       "skipLibCheck": true,
+      "noUnusedLocals": true,
       "baseUrl": "./",
       "paths": {
         "ream/*": ["packages/ream/*"],
