--- a/packages/ream-server/package.json
+++ b/packages/ream-server/package.json
@@ -1,21 +1,27 @@
 {
   "version": "0.0.0",
   "name": "ream-server",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc --watch",
+    "build": "rollup -c",
+    "watch": "rollup -c --watch",
     "test": "echo lol"
   },
   "license": "MIT",
   "dependencies": {
     "@ream/common": "0.0.0",
+    "devalue": "^2.0.1",
+    "express": "^4.17.1",
     "vue": "^2.6.11",
-    "vue-server-renderer": "^2.6.11",
     "vue-meta": "^2.3.3",
     "vue-router": "^3.1.6",
-    "devalue": "^2.0.1",
-    "express": "^4.17.1"
+    "vue-server-renderer": "^2.6.11"
+  },
+  "devDependencies": {
+    "rollup": "^2.6.1",
+    "rollup-plugin-typescript2": "^0.27.0"
   }
 }
