--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -42,6 +42,7 @@
     "fs-extra": "^9.0.0",
     "joycon": "^2.2.5",
     "ream-server": "0.0.0",
+    "resolve-from": "^5.0.0",
     "source-map-support": "^0.5.16",
     "time-fix-plugin": "^2.0.6",
     "vue-loader": "^15.9.1",
