Skip plugin test for now

--- a/packages/@ream/plugin-google-analytics/package.json
+++ b/packages/@ream/plugin-google-analytics/package.json
@@ -5,6 +5,9 @@
     "access": "public"
   },
   "files": ["src"],
+  "scripts": {
+    "test": "echo skip"
+  },
   "ream-plugin": {
     "name": "Google Analytics",
     "optional-env": ["GA_ANONYMIZE_IP"],
