Flatten plugin structure

--- a/packages/@ream/plugin-google-analytics/package.json
+++ b/packages/@ream/plugin-google-analytics/package.json
@@ -4,7 +4,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "files": ["src"],
+  "files": ["/*.js"],
   "scripts": {
     "test": "echo skip"
   },
