--- a/website/package.json
+++ b/website/package.json
@@ -6,5 +6,10 @@
     "dev": "ream",
     "build": "ream build",
     "test": "echo lol"
+  },
+  "devDependencies": {
+    "@types/marked": "^0.7.4",
+    "marked": "^0.8.2",
+    "tailwindcss": "^1.2.0"
   }
 }
