--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "private": true,
   "name": "ream-workspace",
   "scripts": {
+    "test:unit": "jest --testPathPattern test/unit/",
+    "test:integration": "jest --testPathPattern test/integration/ --runInBand",
+    "test": "npm run build && npm run test:unit && npm run test:integration",
     "build": "lerna run build --ignore website"
   },
   "workspaces": [
@@ -11,7 +14,10 @@
     "website"
   ],
   "devDependencies": {
+    "@types/jest": "^25.2.1",
+    "jest": "^25.3.0",
     "lerna": "^3.20.2",
+    "ts-jest": "^25.3.1",
     "typescript": "^3.8.3"
   }
 }
