--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -10,7 +10,7 @@
   "main": "dist/index.js",
   "bin": "dist/cli.js",
   "scripts": {
-    "test": "jest",
+    "test": "echo skip",
     "watch": "tsc --watch",
     "build": "tsc"
   },
@@ -57,12 +57,9 @@
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/fs-extra": "^8.1.0",
-    "@types/jest": "^25.2.1",
     "@types/node": "^13.11.1",
     "@types/webpack": "^4.41.10",
     "@types/webpack-dev-middleware": "^3.7.0",
-    "@types/webpack-hot-middleware": "^2.25.1",
-    "jest": "^25.3.0",
-    "ts-jest": "^25.3.1"
+    "@types/webpack-hot-middleware": "^2.25.1"
   }
 }
