--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,10 @@
 version: 2.1
 orbs:
-  node: circleci/node@1.1.6-browsers
+  node: circleci/node@1.1.6
 jobs:
   build-and-test:
-    executor:
-      name: node/default
+    docker:
+      - image: 'circleci/node:12-browsers'
     steps:
       - checkout
       - node/with-cache:
