--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -33,6 +33,7 @@
     "@babel/runtime": "^7.9.2",
     "@egoist/postcss-loader": "^3.0.2",
     "@ream/common": "0.0.0",
+    "@ream/vue-server-renderer": "0.0.0",
     "babel-loader": "^8.1.0",
     "cac": "^6.5.8",
     "chokidar": "^3.3.1",
@@ -43,7 +44,6 @@
     "joycon": "^2.2.5",
     "ream-server": "0.0.0",
     "resolve-from": "^5.0.0",
-    "source-map-support": "^0.5.16",
     "time-fix-plugin": "^2.0.6",
     "vue-loader": "^15.9.1",
     "vue-template-compiler": "^2.6.11",
