--- a/website/package.json
+++ b/website/package.json
@@ -8,8 +8,11 @@
     "test": "echo lol"
   },
   "devDependencies": {
+    "@egoist/md-colors": "^1.1.0",
     "@types/marked": "^0.7.4",
+    "@types/prismjs": "^1.16.0",
     "marked": "^0.8.2",
+    "prismjs": "^1.20.0",
     "tailwindcss": "^1.2.0"
   }
 }
