--- a/website/package.json
+++ b/website/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@egoist/md-colors": "^1.1.0",
+    "@fullhuman/postcss-purgecss": "^2.1.2",
     "@types/marked": "^0.7.4",
     "@types/prismjs": "^1.16.0",
     "marked": "^0.8.2",
