--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -42,6 +42,8 @@
     "fast-glob": "^3.2.2",
     "fs-extra": "^9.0.0",
     "joycon": "^2.2.5",
+    "mini-css-extract-plugin": "0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "ream-server": "0.0.0",
     "resolve-from": "^5.0.0",
     "time-fix-plugin": "^2.0.6",
