--- a/website/package.json
+++ b/website/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "version": "0.0.0",
+  "version": "5.0.0-alpha.0",
   "name": "website",
   "scripts": {
     "dev": "ream",
