--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,7 @@
     "packages/ream-server",
     "packages/@ream/*"
   ],
-  "version": "0.0.0",
+  "version": "5.0.0-alpha.0",
   "npmClient": "yarn",
   "useWorkspaces": true
 }
