--- a/packages/@ream/common/package.json
+++ b/packages/@ream/common/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.0",
+  "version": "5.0.0-alpha.0",
   "name": "@ream/common",
   "publishConfig": {
     "access": "public"
@@ -9,7 +9,9 @@
     "build": "tsc",
     "test": "echo lol"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "main": "dist/index.js",
   "license": "MIT",
   "dependencies": {
