--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.0",
+  "version": "5.0.0-alpha.0",
   "name": "ream",
   "description": "The Vue Framework",
   "files": [
@@ -32,8 +32,8 @@
     "@babel/preset-typescript": "^7.9.0",
     "@babel/runtime": "^7.9.2",
     "@egoist/postcss-loader": "^3.0.2",
-    "@ream/common": "0.0.0",
-    "@ream/vue-server-renderer": "0.0.0",
+    "@ream/common": "^5.0.0-alpha.0",
+    "@ream/vue-server-renderer": "^5.0.0-alpha.0",
     "babel-loader": "^8.1.0",
     "cac": "^6.5.8",
     "chokidar": "^3.3.1",
@@ -44,7 +44,7 @@
     "joycon": "^2.2.5",
     "mini-css-extract-plugin": "0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "ream-server": "0.0.0",
+    "ream-server": "^5.0.0-alpha.0",
     "resolve-from": "^5.0.0",
     "time-fix-plugin": "^2.0.6",
     "vue-loader": "^15.9.1",
