chore(website): tweak ream config

--- a/website/package.json
+++ b/website/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "ream",
     "build": "ream build",
+    "export": "ream export",
     "test": "echo lol"
   },
   "devDependencies": {
