--- a/packages/ream-server/package.json
+++ b/packages/ream-server/package.json
@@ -18,13 +18,18 @@
     "@ream/common": "^5.0.0-alpha.0",
     "@ream/vue-server-renderer": "^5.0.0-alpha.0",
     "cac": "^6.5.8",
+    "connect": "^3.7.0",
     "devalue": "^2.0.1",
-    "express": "^4.17.1",
+    "sirv": "^0.4.2",
     "vue": "^2.6.11",
     "vue-meta": "^2.3.3",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@types/connect": "^3.4.33",
+    "builtins": "^3.0.1",
+    "caller-path": "^3.0.0",
     "rollup": "^2.6.1",
     "rollup-plugin-typescript2": "^0.27.0"
   }
