--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -4,7 +4,7 @@
   "description": "The Vue Framework",
   "files": [
     "/dist",
-    "/app",
+    "/vue-app",
     "/404.js",
     "/app.js",
     "/document.js",
