--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -36,10 +36,12 @@
     "@babel/runtime": "^7.9.2",
     "@egoist/postcss-loader": "^3.0.2",
     "@ream/common": "^5.0.0-alpha.0",
-    "@ream/vue-server-renderer": "^5.0.0-alpha.0",
+    "@tinyhttp/app": "^0.2.38",
+    "@vue/compiler-sfc": "^3.0.0-rc.4",
     "babel-loader": "^8.1.0",
     "cac": "^6.5.8",
     "chokidar": "^3.3.1",
+    "connect": "^3.7.0",
     "consola": "^2.11.3",
     "css-loader": "^3.5.2",
     "fast-glob": "^3.2.2",
@@ -47,11 +49,13 @@
     "joycon": "^2.2.5",
     "mini-css-extract-plugin": "0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "ream-server": "^5.0.0-alpha.0",
+    "path-to-regexp": "^6.1.0",
     "resolve-from": "^5.0.0",
     "time-fix-plugin": "^2.0.6",
-    "vue-loader": "^15.9.1",
-    "vue-template-compiler": "^2.6.11",
+    "vue": "^3.0.0-rc.4",
+    "vue-loader": "^16.0.0-beta.4",
+    "vue-router": "^4.0.0-beta.3",
+    "vue-style-loader": "^4.1.2",
     "webpack": "^4.42.1",
     "webpack-chain": "^6.4.0",
     "webpack-dev-middleware": "^3.7.2",
