--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -36,8 +36,8 @@
     "@babel/runtime": "^7.9.2",
     "@egoist/postcss-loader": "^3.0.2",
     "@ream/common": "^5.0.0-alpha.0",
-    "@tinyhttp/app": "^0.2.38",
     "@vue/compiler-sfc": "^3.0.0-rc.4",
+    "@vue/server-renderer": "^3.0.0-rc.4",
     "babel-loader": "^8.1.0",
     "cac": "^6.5.8",
     "chokidar": "^3.3.1",
@@ -51,6 +51,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "path-to-regexp": "^6.1.0",
     "resolve-from": "^5.0.0",
+    "serialize-javascript": "^4.0.0",
     "time-fix-plugin": "^2.0.6",
     "vue": "^3.0.0-rc.4",
     "vue-loader": "^16.0.0-beta.4",
@@ -66,6 +67,7 @@
   "devDependencies": {
     "@types/fs-extra": "^8.1.0",
     "@types/node": "^13.11.1",
+    "@types/serialize-javascript": "^4.0.0",
     "@types/webpack": "^4.41.10",
     "@types/webpack-dev-middleware": "^3.7.0",
     "@types/webpack-hot-middleware": "^2.25.1"
