--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jest": "^25.3.0",
     "lerna": "^3.20.2",
     "ts-jest": "^25.3.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "tsup": "^3.1.1"
   }
 }
