--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -33,8 +33,8 @@
     "@babel/runtime": "^7.9.2",
     "@egoist/postcss-loader": "^3.0.2",
     "@ream/common": "^5.0.0-alpha.0",
-    "@ream/head": "0.0.0",
     "@ream/fetch": "0.0.0",
+    "@ream/head": "0.0.0",
     "@vue/compiler-sfc": "^3.0.0-rc.4",
     "@vue/server-renderer": "^3.0.0-rc.4",
     "babel-loader": "^8.1.0",
@@ -45,12 +45,14 @@
     "css-loader": "^3.5.2",
     "fast-glob": "^3.2.2",
     "fs-extra": "^9.0.0",
+    "hash-sum": "^2.0.0",
     "joycon": "^2.2.5",
     "mini-css-extract-plugin": "0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "path-to-regexp": "^6.1.0",
     "resolve-from": "^5.0.0",
     "serialize-javascript": "^4.0.0",
+    "serve-static": "^1.14.1",
     "time-fix-plugin": "^2.0.6",
     "vue": "^3.0.0-rc.4",
     "vue-loader": "^16.0.0-beta.4",
@@ -65,8 +67,10 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^8.1.0",
+    "@types/hash-sum": "^1.0.0",
     "@types/node": "^13.11.1",
     "@types/serialize-javascript": "^4.0.0",
+    "@types/serve-static": "^1.13.4",
     "@types/webpack": "^4.41.10",
     "@types/webpack-dev-middleware": "^3.7.0",
     "@types/webpack-hot-middleware": "^2.25.1"
