--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
 jobs:
   build-and-test:
     docker:
-      - image: 'circleci/node:12-browsers'
+      - image: 'circleci/node:12'
     steps:
       - checkout
       - node/with-cache:
@@ -12,6 +12,6 @@ jobs:
             - run: yarn
             - run: yarn test
 workflows:
-    build-and-test:
-      jobs:
-        - build-and-test
+  build-and-test:
+    jobs:
+      - build-and-test
