--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
 jobs:
   build-and-test:
     docker:
-      - image: 'circleci/node:12'
+      - image: 'circleci/node:12-browsers'
     steps:
       - checkout
       - node/with-cache:
