--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@types/jest": "^25.2.1",
     "jest": "^25.3.0",
     "lerna": "^3.20.2",
+    "prettier": "^2.0.5",
     "ts-jest": "^25.3.1",
-    "typescript": "^3.8.3",
-    "tsup": "^3.1.1"
+    "tsup": "^3.1.1",
+    "typescript": "^3.8.3"
   }
 }
