--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -25,48 +25,49 @@
     "url": "https://github.com/egoist/ream"
   },
   "dependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-typescript": "^7.9.0",
-    "@babel/runtime": "^7.9.2",
-    "@egoist/postcss-loader": "^3.0.2",
-    "@egoist/vue-head": "^0.1.6",
-    "@ream/common": "^5.0.0-alpha.0",
+    "@babel/core": "7.10.5",
+    "@babel/plugin-proposal-object-rest-spread": "7.10.4",
+    "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/plugin-transform-runtime": "7.10.5",
+    "@babel/preset-env": "7.10.4",
+    "@babel/preset-typescript": "7.10.4",
+    "@babel/runtime": "7.10.5",
+    "@egoist/postcss-loader": "3.0.2",
+    "@egoist/vue-head": "0.1.6",
+    "@ream/common": "5.0.0-alpha.0",
     "@ream/fetch": "0.0.0",
-    "@vue/compiler-sfc": "^3.0.0-rc.4",
-    "@vue/server-renderer": "^3.0.0-rc.4",
-    "babel-loader": "^8.1.0",
-    "cac": "^6.5.8",
-    "chokidar": "^3.3.1",
-    "connect": "^3.7.0",
-    "consola": "^2.11.3",
-    "css-loader": "^3.5.2",
-    "fast-glob": "^3.2.2",
-    "fs-extra": "^9.0.0",
-    "hash-sum": "^2.0.0",
-    "joycon": "^2.2.5",
+    "@vue/compiler-sfc": "3.0.0-rc.4",
+    "@vue/server-renderer": "3.0.0-rc.4",
+    "babel-loader": "8.1.0",
+    "cac": "6.5.8",
+    "chokidar": "3.3.1",
+    "connect": "3.7.0",
+    "consola": "2.11.3",
+    "css-loader": "3.5.2",
+    "fast-glob": "3.2.2",
+    "fs-extra": "9.0.0",
+    "hash-sum": "2.0.0",
+    "joycon": "2.2.5",
     "mini-css-extract-plugin": "0.9.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "path-to-regexp": "^6.1.0",
-    "resolve-from": "^5.0.0",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
+    "path-to-regexp": "6.1.0",
+    "resolve-from": "5.0.0",
     "serialize-javascript": "^4.0.0",
-    "serve-static": "^1.14.1",
+    "serve-static": "1.14.1",
     "time-fix-plugin": "^2.0.6",
-    "vue": "^3.0.0-rc.4",
-    "vue-loader": "^16.0.0-beta.4",
-    "vue-router": "^4.0.0-beta.3",
-    "vue-style-loader": "^4.1.2",
-    "webpack": "^4.42.1",
+    "vue": "3.0.0-rc.4",
+    "vue-loader": "16.0.0-beta.4",
+    "vue-router": "4.0.0-beta.3",
+    "vue-style-loader": "4.1.2",
+    "webpack": "4.42.1",
     "webpack-chain": "^6.4.0",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-hot-middleware": "^2.25.0",
-    "webpack-node-externals": "^1.7.2",
-    "webpackbar": "^4.0.0"
+    "webpack-dev-middleware": "3.7.2",
+    "webpack-hot-middleware": "2.25.0",
+    "webpack-node-externals": "1.7.2",
+    "webpackbar": "4.0.0"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.1.9",
     "@types/fs-extra": "^8.1.0",
     "@types/hash-sum": "^1.0.0",
     "@types/node": "^13.11.1",
