--- a/packages/ream/tsconfig.json
+++ b/packages/ream/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
+    "allowJs": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "vue-app/constants.ts"]
 }
