--- a/website/package.json
+++ b/website/package.json
@@ -14,6 +14,7 @@
     "@types/prismjs": "^1.16.0",
     "marked": "^0.8.2",
     "prismjs": "^1.20.0",
-    "tailwindcss": "^1.5.2"
+    "tailwindcss": "^1.5.2",
+    "@tailwindcss/ui": "0.4.0"
   }
 }
