--- a/packages/@ream/fetch/package.json
+++ b/packages/@ream/fetch/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@ream/fetch",
-  "version": "5.0.0-alpha.1",
   "publishConfig": {
     "access": "public"
   },
+  "version": "0.0.0",
   "files": [
     "index.js",
     "browser.js",
