--- a/packages/@ream/fetch/package.json
+++ b/packages/@ream/fetch/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "0.0.0",
+  "version": "5.0.0-alpha.2",
   "files": [
     "index.js",
     "browser.js",
