--- a/packages/ream/tsconfig.json
+++ b/packages/ream/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist",
-    "allowJs": true
+    "outDir": "dist"
   },
-  "include": ["src/**/*", "vue-app/constants.ts"]
+  "include": ["src/**/*"]
 }
