--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   ],
   "devDependencies": {
     "@types/jest": "^26.0.7",
+    "esbuild-register": "^2.0.0",
     "jest": "^25.3.0",
     "lerna": "^3.20.2",
     "prettier": "^2.0.5",
     "ts-jest": "^25.3.1",
-    "tsup": "^3.4.0",
     "typescript": "^3.8.3"
   }
 }
