--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "test:integration": "jest --testPathPattern test/integration/ --runInBand",
     "test": "npm run build && npm run test:unit && npm run test:integration",
     "build": "lerna run build --ignore website",
+    "build-ream": "yarn workspace ream build",
+    "watch-ream": "yarn workspace ream watch",
     "ream": "node ./packages/ream/dist/cli"
   },
   "workspaces": [
