--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -30,7 +30,7 @@
     "@ream/common": "5.0.0-alpha.0",
     "@ream/fetch": "5.0.0-alpha.3",
     "@vitejs/plugin-vue": "1.1.0",
-    "@vue/compiler-sfc": "3.0.4",
+    "@vue/compiler-sfc": "3.0.5",
     "@vue/server-renderer": "3.0.5",
     "@vueuse/head": "^0.2.3",
     "cac": "6.6.1",
@@ -46,15 +46,17 @@
     "resolve-from": "5.0.0",
     "serialize-javascript": "4.0.0",
     "serve-static": "1.14.1",
-    "vite": "2.0.0-beta.38",
+    "vite": "2.0.0-beta.46",
     "vue": "3.0.5",
     "vue-router": "4.0.3"
   },
   "devDependencies": {
     "@types/fs-extra": "9.0.4",
     "@types/hash-sum": "1.0.0",
+    "@types/mock-fs": "^4.13.0",
     "@types/node": "14.0.26",
     "@types/serialize-javascript": "4.0.0",
-    "@types/serve-static": "1.13.4"
+    "@types/serve-static": "1.13.4",
+    "mock-fs": "^4.13.0"
   }
 }
