--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lerna": "^3.20.2",
     "prettier": "^2.0.5",
     "ts-jest": "^25.3.1",
-    "typescript": "^3.8.3"
+    "tsup": "^3.12.1",
+    "typescript": "^4.1.3"
   }
 }
