wip: add preloadLinks

--- a/packages/@ream/server/package.json
+++ b/packages/@ream/server/package.json
@@ -14,7 +14,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.ts src/cli.ts --dts"
+    "build": "tsup src/index.ts src/cli.ts --dts",
+    "watch": "npm run build -- --watch"
   },
   "dependencies": {
     "cac": "6.7.1",
