--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -19,7 +19,7 @@
   "license": "MIT",
   "author": {
     "email": "0x142857@gmail.com",
-    "name": "EGOIST (Kevin Titor)"
+    "name": "EGOIST"
   },
   "repository": {
     "type": "git",
