--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -2,9 +2,10 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "moduleResolution": "node",
+    "module": "esnext",
     "baseUrl": "./",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./src/*"]
     }
   }
 }
