--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -41,7 +41,7 @@
     "resolve-from": "5.0.0",
     "serialize-javascript": "4.0.0",
     "serve-static": "1.14.1",
-    "vite": "2.0.0-beta.65"
+    "vite": "2.0.0-beta.70"
   },
   "peerDependencies": {
     "@ream/server": "*"
@@ -54,6 +54,7 @@
     "@types/node": "14.0.26",
     "@types/serialize-javascript": "4.0.0",
     "@types/serve-static": "1.13.4",
-    "mock-fs": "^4.13.0"
+    "mock-fs": "^4.13.0",
+    "type-fest": "^0.21.1"
   }
 }
