--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "test": "echo skip",
     "watch": "tsc --watch",
-    "build": "tsc",
+    "build": "tsc && chmod +x dist/cli.js",
     "prepublishOnly": "npm run build"
   },
   "license": "MIT",
