--- a/packages/@ream/app/package.json
+++ b/packages/@ream/app/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "@ream/vue-app",
+  "name": "@ream/app",
   "version": "0.0.0",
   "publishConfig": {
     "access": "public"
   },
   "files": [
     "*.js",
+    "*.d.ts",
     "pages"
   ]
 }
