--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "test:unit": "jest --testPathPattern packages",
     "test:integration": "jest --testPathPattern test/integration/ --runInBand",
     "test": "npm run build && npm run test:unit && npm run test:integration",
-    "build": "lerna run build --ignore website",
+    "build": "sh scripts/build.sh",
     "build-ream": "yarn workspace ream build",
     "watch-ream": "yarn workspace ream watch",
     "ream": "node ./packages/ream/dist/cli"
