--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
   "private": true,
   "name": "ream-workspace",
+  "workspaces": [
+    "packages/*",
+    "website",
+    "examples/*"
+  ],
   "scripts": {
     "test:unit": "jest --testPathPattern packages",
     "test:integration": "jest --testPathPattern test/integration/ --runInBand",
     "test": "npm run build && npm run test:unit && npm run test:integration",
-    "build": "sh scripts/build.sh",
+    "build": "node -r esbuild-register  scripts/build.ts",
     "dev": "node -r esbuild-register scripts/dev.ts",
     "ream": "node ./packages/ream/dist/cli"
   },
-  "workspaces": [
-    "packages/ream",
-    "packages/ream-server",
-    "packages/@ream/*",
-    "website",
-    "examples/data-fetching"
-  ],
   "devDependencies": {
     "@types/jest": "^26.0.20",
+    "chalk": "^4.1.0",
+    "dtsup": "^1.0.1",
     "esbuild-register": "^2.0.0",
+    "execa": "^5.0.0",
     "jest": "^26.6.3",
-    "lerna": "^3.20.2",
     "prettier": "^2.0.5",
     "ts-jest": "^26.5.1",
-    "tsup": "^4.0.0",
+    "tsc-watch": "^4.2.9",
     "typescript": "^4.1.3"
   }
 }
