--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -3,15 +3,17 @@
   "name": "ream",
   "description": "The Vue Framework",
   "files": [
-    "/dist"
+    "/dist",
+    "/cli.js"
   ],
   "main": "dist/index.js",
-  "bin": "dist/cli.js",
+  "bin": "cli.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo skip",
-    "dev": "tsc --watch",
-    "build": "tsc && chmod +x dist/cli.js",
+    "dev": "npm run clean && tsc --watch",
+    "build": "npm run clean && tsc --declarationDir temp && dtsup temp/index.d.ts",
+    "clean": "rm -rf dist",
     "prepublishOnly": "npm run build"
   },
   "license": "MIT",
@@ -26,7 +28,6 @@
   "dependencies": {
     "@babel/core": "^7.12.10",
     "@egoist/promise-queue": "^1.1.0",
-    "@ream/common": "5.0.0-alpha.0",
     "@vitejs/plugin-vue": "1.1.4",
     "@vue/compiler-sfc": "3.0.5",
     "cac": "6.6.1",
@@ -38,12 +39,11 @@
     "hash-sum": "2.0.0",
     "joycon": "2.2.5",
     "resolve-from": "5.0.0",
-    "serialize-javascript": "5.0.1",
-    "serve-static": "1.14.1",
-    "vite": "2.0.1"
+    "vite": "2.0.1",
+    "esbuild": "^0.8.51"
   },
   "peerDependencies": {
-    "@ream/server": "*"
+    "@ream/server": "5.0.0-alpha.3"
   },
   "devDependencies": {
     "@types/debug": "^4.1.5",
@@ -51,9 +51,8 @@
     "@types/hash-sum": "1.0.0",
     "@types/mock-fs": "^4.13.0",
     "@types/node": "14.14.31",
-    "@types/serialize-javascript": "5.0.0",
-    "@types/serve-static": "1.13.4",
     "mock-fs": "^4.13.0",
-    "type-fest": "^0.21.1"
+    "type-fest": "^0.21.1",
+    "@ream/server": "5.0.0-alpha.3"
   }
 }
