--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -34,25 +34,25 @@
     "chokidar": "3.4.2",
     "consola": "2.15.3",
     "debug": "^4.3.1",
+    "esbuild": "^0.8.51",
     "fast-glob": "3.2.5",
     "fs-extra": "9.1.0",
     "hash-sum": "2.0.0",
     "joycon": "2.2.5",
     "resolve-from": "5.0.0",
-    "vite": "2.0.1",
-    "esbuild": "^0.8.51"
+    "vite": "2.0.1"
   },
   "peerDependencies": {
     "@ream/server": "5.0.0-alpha.3"
   },
   "devDependencies": {
+    "@ream/server": "5.0.0-alpha.3",
     "@types/debug": "^4.1.5",
     "@types/fs-extra": "9.0.7",
     "@types/hash-sum": "1.0.0",
     "@types/mock-fs": "^4.13.0",
     "@types/node": "14.14.31",
     "mock-fs": "^4.13.0",
-    "type-fest": "^0.21.1",
-    "@ream/server": "5.0.0-alpha.3"
+    "type-fest": "^0.21.1"
   }
 }
