--- a/website/package.json
+++ b/website/package.json
@@ -9,13 +9,13 @@
     "test": "echo lol"
   },
   "devDependencies": {
-    "@ream/plugin-google-analytics": "5.0.0-alpha.3",
-    "@ream/server": "5.0.0-alpha.3",
     "@types/marked": "^1.1.0",
     "@types/prismjs": "^1.16.0",
     "marked": "^2.0.0",
     "prismjs": "^1.20.0",
+    "vite-plugin-windicss": "^0.4.3",
     "ream": "5.0.0-alpha.3",
-    "vite-plugin-windicss": "^0.4.3"
+    "@ream/server": "5.0.0-alpha.3",
+    "@ream/plugin-google-analytics": "5.0.0-alpha.3"
   }
 }
