--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -40,10 +40,8 @@
     "joycon": "2.2.5",
     "resolve-from": "5.0.0",
     "vite": "2.0.1",
-    "esbuild": "^0.8.51"
-  },
-  "peerDependencies": {
-    "@ream/server": "5.0.0-alpha.3"
+    "esbuild": "^0.8.51",
+    "@ream/server": "workspace:*"
   },
   "devDependencies": {
     "@types/debug": "^4.1.5",
@@ -52,7 +50,6 @@
     "@types/mock-fs": "^4.13.0",
     "@types/node": "14.14.31",
     "mock-fs": "^4.13.0",
-    "type-fest": "^0.21.1",
-    "@ream/server": "5.0.0-alpha.3"
+    "type-fest": "^0.21.1"
   }
 }
