--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,7 +25,8 @@
     "path-to-regexp": "6.1.0",
     "serve-static": "1.14.1",
     "debug": "4.3.1",
-    "serialize-javascript": "5.0.1"
+    "serialize-javascript": "5.0.1",
+    "@ream/app": "workspace:*"
   },
   "devDependencies": {
     "@types/debug": "4.1.5",
@@ -33,7 +34,6 @@
     "@types/serve-static": "1.13.9"
   },
   "peerDependencies": {
-    "vue": ">=3",
-    "@ream/app": "5.0.0-alpha.3"
+    "vue": ">=3"
   }
 }
