--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prettier": "^2.0.5",
     "ts-jest": "^26.5.1",
     "tsc-watch": "^4.2.9",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "@ream/test-utils": "workspace:*"
   }
 }
