--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -41,7 +41,8 @@
     "resolve-from": "5.0.0",
     "vite": "2.0.1",
     "esbuild": "^0.8.51",
-    "@ream/server": "workspace:*"
+    "@ream/server": "workspace:*",
+    "@ream/app": "workspace:*"
   },
   "devDependencies": {
     "@types/debug": "^4.1.5",
