--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
     "test": "npm run build && npm run test:unit && npm run test:integration",
     "build": "node -r esbuild-register  scripts/build.ts",
     "dev": "node -r esbuild-register scripts/dev.ts",
-    "ream": "node ./packages/ream/dist/cli"
+    "release": "node -r esbuild-register scripts/release.ts"
   },
   "devDependencies": {
+    "@ream/test-utils": "workspace:*",
     "@types/jest": "^26.0.20",
+    "@types/semver": "^7.3.4",
     "chalk": "^4.1.0",
     "dtsup": "^1.0.1",
     "esbuild-register": "^2.0.0",
     "execa": "^5.0.0",
     "jest": "^26.6.3",
     "prettier": "^2.0.5",
+    "semver": "^7.3.4",
     "ts-jest": "^26.5.1",
     "tsc-watch": "^4.2.9",
-    "typescript": "^4.1.3",
-    "@ream/test-utils": "workspace:*"
+    "typescript": "^4.1.3"
   }
 }
