--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -30,21 +30,21 @@
   "dependencies": {
     "@babel/core": "^7.12.10",
     "@egoist/promise-queue": "^1.1.0",
+    "@ream/app": "workspace:*",
+    "@ream/server": "workspace:*",
     "@vitejs/plugin-vue": "1.1.4",
     "@vue/compiler-sfc": "3.0.5",
     "cac": "6.6.1",
     "chokidar": "3.4.2",
     "consola": "2.15.3",
     "debug": "^4.3.1",
+    "esbuild": "^0.8.51",
     "fast-glob": "3.2.5",
     "fs-extra": "9.1.0",
     "hash-sum": "2.0.0",
     "joycon": "2.2.5",
     "resolve-from": "5.0.0",
-    "vite": "2.0.1",
-    "esbuild": "^0.8.51",
-    "@ream/server": "workspace:*",
-    "@ream/app": "workspace:*"
+    "vite": "2.0.1"
   },
   "devDependencies": {
     "@types/debug": "^4.1.5",
