feat: new api for using plugins in config file

--- a/packages/plugin-google-analytics/package.json
+++ b/packages/plugin-google-analytics/package.json
@@ -5,9 +5,13 @@
     "access": "public"
   },
   "files": [
-    "/*.js"
+    "*.js",
+    "*.d.ts"
   ],
   "scripts": {
     "test": "echo skip"
+  },
+  "devDependencies": {
+    "ream": "workspace:*"
   }
 }
