--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -12,12 +12,7 @@
   "dependencies": {
     "@ream/fetch": "workspace:*",
     "@vueuse/head": "^0.2.3",
-    "vue-router": "4.0.3"
-  },
-  "devDependencies": {
-    "vue": "3.0.5"
-  },
-  "peerDependencies": {
-    "vue": ">=3"
+    "vue-router": "^4.0.3",
+    "vue": "^3.0.5"
   }
 }
