--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -32,8 +32,9 @@
     "@egoist/promise-queue": "^1.1.0",
     "@ream/app": "workspace:*",
     "@ream/server": "workspace:*",
-    "@vitejs/plugin-vue": "1.1.4",
-    "@vue/compiler-sfc": "3.0.5",
+    "@vitejs/plugin-vue": "^1.1.4",
+    "@vue/compiler-sfc": "^3.0.5",
+    "vue": "^3.0.5",
     "cac": "6.6.1",
     "chokidar": "3.4.2",
     "consola": "2.15.3",
@@ -44,7 +45,7 @@
     "hash-sum": "2.0.0",
     "joycon": "2.2.5",
     "resolve-from": "5.0.0",
-    "vite": "2.0.1"
+    "vite": "^2.0.3"
   },
   "devDependencies": {
     "@types/debug": "^4.1.5",
