--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "@ream/app": "workspace:*",
-    "@vue/server-renderer": "3.0.5",
+    "@vue/server-renderer": "^3.0.5",
+    "vue": "^3.0.5",
     "cac": "6.7.1",
     "connect": "3.7.0",
     "debug": "4.3.1",
@@ -32,8 +33,5 @@
     "@types/debug": "4.1.5",
     "@types/serialize-javascript": "5.0.0",
     "@types/serve-static": "1.13.9"
-  },
-  "peerDependencies": {
-    "vue": ">=3"
   }
 }
