--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -7,7 +7,8 @@
   "files": [
     "*.js",
     "*.d.ts",
-    "pages"
+    "pages",
+    "lib"
   ],
   "dependencies": {
     "@ream/fetch": "workspace:*",
