--- a/packages/create-ream-app/package.json
+++ b/packages/create-ream-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-ream-app",
-  "version": "1.0.0-alpha.0",
+  "version": "1.0.0-beta.0",
   "files": [
     "template",
     "lib"
