--- a/packages/fetch/package.json
+++ b/packages/fetch/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "5.0.0-alpha.4",
+  "version": "5.0.0-beta.0",
   "files": [
     "*.js",
     "*.d.ts"
