--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "5.0.0-alpha.5",
+  "version": "5.0.0-beta.0",
   "name": "ream",
   "description": "The Vue Framework",
   "files": [
