--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ream/server",
-  "version": "5.0.0-alpha.4",
+  "version": "5.0.0-beta.0",
   "publishConfig": {
     "access": "public"
   },
