--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -35,6 +35,7 @@
     "@vitejs/plugin-vue": "^1.1.4",
     "@vue/compiler-sfc": "^3.0.5",
     "cac": "6.6.1",
+    "chalk": "^4.1.0",
     "chokidar": "3.4.2",
     "consola": "2.15.3",
     "debug": "^4.3.1",
