--- a/examples/automatic-routing/package.json
+++ b/examples/automatic-routing/package.json
@@ -1,5 +1,9 @@
 {
   "private": true,
   "version": "0.0.0",
-  "name": "automatic-routing"
+  "name": "example-automatic-routing",
+  "dependencies": {
+    "ream": "workspace:*",
+    "@ream/app": "workspace:*"
+  }
 }
