--- a/examples/nested-routes/package.json
+++ b/examples/nested-routes/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "version": "0.0.0",
-  "name": "example-data-fetching",
+  "name": "example-nested-routes",
   "scripts": {
     "dev": "ream"
   },
