--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,13 +21,13 @@
   "dependencies": {
     "@ream/app": "workspace:*",
     "@vue/server-renderer": "^3.0.5",
-    "vue": "^3.0.5",
     "cac": "6.7.1",
     "connect": "3.7.0",
     "debug": "4.3.1",
     "path-to-regexp": "6.1.0",
     "serialize-javascript": "5.0.1",
-    "serve-static": "1.14.1"
+    "serve-static": "1.14.1",
+    "vue": "^3.0.5"
   },
   "devDependencies": {
     "@types/debug": "4.1.5",
