feat(app): add defineClientOnlyComponent
closes #209 #13

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -8,7 +8,8 @@
     "*.js",
     "*.d.ts",
     "pages",
-    "lib"
+    "lib",
+    "components"
   ],
   "dependencies": {
     "@ream/fetch": "workspace:*",
