--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test:integration": "jest --testPathPattern test/integration/ --runInBand",
     "test": "npm run build && npm run test:unit && npm run test:integration",
     "build": "node -r esbuild-register  scripts/build.ts",
-    "dev": "node -r esbuild-register scripts/dev.ts"
+    "dev": "node -r esbuild-register scripts/dev.ts",
+    "ream": "node packages/ream/dist/cli"
   },
   "devDependencies": {
     "@ream/test-utils": "workspace:*",
