--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@ream/fetch": "workspace:*",
     "@vueuse/head": "^0.2.3",
-    "vue-router": "^4.0.3",
-    "vue": "^3.0.5"
+    "mitt": "^2.1.0",
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.3"
   }
 }
