feat: introduce modules
modules are runtime dependencies, it means you need to add them to `dependencies` instead of `devDependencies`, while plugins are usualy `devDependencies`

--- a/packages/module-vuex/package.json
+++ b/packages/module-vuex/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ream/plugin-vuex",
+  "name": "@ream/module-vuex",
   "version": "0.0.0",
   "publishConfig": {
     "access": "public"
@@ -9,8 +9,14 @@
     "*.js",
     "*.d.ts"
   ],
+  "ream-module": {
+    "name": "vuex"
+  },
   "devDependencies": {
     "ream": "workspace:*",
     "vuex": "^4.0.0"
+  },
+  "dependencies": {
+    "vuex-router-sync": "^6.0.0-rc.1"
   }
 }
