--- a/packages/module-google-analytics/package.json
+++ b/packages/module-google-analytics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ream/module-google-analytics",
-  "version": "0.0.0",
+  "version": "1.0.0-beta.0",
   "publishConfig": {
     "access": "public"
   },
