--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -44,6 +44,7 @@
     "hash-sum": "2.0.0",
     "joycon": "2.2.5",
     "resolve-from": "5.0.0",
+    "serialize-javascript": "^5.0.1",
     "vite": "^2.0.3",
     "vue": "^3.0.5"
   },
