--- a/packages/plugin-vuex/package.json
+++ b/packages/plugin-vuex/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ream/module-vuex",
+  "name": "@ream/plugin-vuex",
   "version": "1.0.0-beta.0",
   "publishConfig": {
     "access": "public"
@@ -9,9 +9,6 @@
     "*.js",
     "*.d.ts"
   ],
-  "ream-module": {
-    "name": "vuex"
-  },
   "devDependencies": {
     "ream": "workspace:*",
     "vuex": "^4.0.0"
