chore(deps): update joycon

--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -42,7 +42,7 @@
     "fast-glob": "3.2.5",
     "fs-extra": "9.1.0",
     "hash-sum": "2.0.0",
-    "joycon": "2.2.5",
+    "joycon": "^3.0.0",
     "resolve-from": "5.0.0",
     "serialize-javascript": "^5.0.1",
     "vite": "^2.0.3",
