--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,12 +25,11 @@
     "debug": "4.3.1",
     "path-to-regexp": "6.1.0",
     "serialize-javascript": "5.0.1",
-    "serve-static": "1.14.1",
+    "sirv": "^1.0.11",
     "vue": "^3.0.5"
   },
   "devDependencies": {
     "@types/debug": "4.1.5",
-    "@types/serialize-javascript": "5.0.0",
-    "@types/serve-static": "1.13.9"
+    "@types/serialize-javascript": "5.0.0"
   }
 }
