--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -26,6 +26,7 @@
     "path-to-regexp": "6.1.0",
     "serialize-javascript": "5.0.1",
     "sirv": "^1.0.11",
+    "trouter": "^3.1.0",
     "vue": "^3.0.5"
   },
   "devDependencies": {
