--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "test:unit": "jest --testPathPattern packages",
     "test:integration": "jest --testPathPattern test/integration/ --runInBand",
     "test": "npm run build && npm run test:unit && npm run test:integration",
-    "build": "node -r esbuild-register  scripts/build.ts",
-    "dev": "node -r esbuild-register scripts/dev.ts",
+    "build": "node -r sucrase/register  scripts/build.ts",
+    "dev": "node -r sucrase/register scripts/dev.ts",
     "ream": "node packages/ream/dist/cli"
   },
   "devDependencies": {
@@ -16,12 +16,13 @@
     "@types/semver": "^7.3.4",
     "chalk": "^4.1.0",
     "dtsup": "^1.0.1",
-    "esbuild-register": "^2.0.0",
     "execa": "^5.0.0",
     "jest-cli": "^26.6.3",
     "prettier": "^2.0.5",
     "semver": "^7.3.4",
+    "sucrase": "^3.17.1",
     "tsc-watch": "^4.2.9",
+    "tsup": "^4.6.1",
     "typescript": "^4.2.3"
   }
 }
