--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -1,10 +1,11 @@
 {
   "version": "5.0.0-beta.7",
   "name": "ream",
-  "description": "The Vue Framework",
+  "description": "The Unversal SSR Framework",
   "files": [
     "/dist",
-    "/cli.js"
+    "/cli.js",
+    "/server"
   ],
   "main": "dist/index.js",
   "bin": {
@@ -28,10 +29,11 @@
   "dependencies": {
     "@babel/core": "^7.12.10",
     "@egoist/promise-queue": "^1.1.0",
+    "@egoist/router": "^1.0.1",
     "@ream/app": "workspace:*",
-    "@ream/server": "workspace:*",
     "@vitejs/plugin-vue": "^1.1.4",
     "@vue/compiler-sfc": "^3.0.5",
+    "@vue/server-renderer": "^3.0.5",
     "cac": "6.6.1",
     "chalk": "^4.1.0",
     "chokidar": "3.4.2",
@@ -44,6 +46,7 @@
     "joycon": "^3.0.0",
     "resolve-from": "5.0.0",
     "serialize-javascript": "^5.0.1",
+    "sirv": "^1.0.11",
     "vite": "^2.0.5",
     "vue": "^3.0.5"
   },
@@ -53,6 +56,7 @@
     "@types/hash-sum": "1.0.0",
     "@types/mock-fs": "^4.13.0",
     "@types/node": "14.14.31",
+    "@types/serialize-javascript": "^5.0.0",
     "mock-fs": "^4.13.0",
     "ts-essentials": "^7.0.1"
   }
