--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "name": "docs",
+  "version": "0.0.0",
   "scripts": {
     "dev": "vitepress dev",
     "build": "vitepress build"
