--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "private": true,
   "name": "ream-workspace",
+  "workspaces": [
+    "packages/*",
+    "examples/*",
+    "docs"
+  ],
   "scripts": {
     "test:unit": "jest --testPathPattern packages",
     "test:integration": "jest --testPathPattern test/integration/ --runInBand",
@@ -14,14 +19,12 @@
     "@types/jest": "^26.0.21",
     "@types/semver": "^7.3.4",
     "chalk": "^4.1.0",
-    "dtsup": "^1.0.1",
     "execa": "^5.0.0",
     "jest-cli": "^26.6.3",
     "prettier": "^2.2.1",
     "semver": "^7.3.4",
     "sucrase": "^3.17.1",
-    "tsc-watch": "^4.2.9",
-    "tsup": "^4.8.17",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "scripts": "workspace:*"
   }
 }
