--- a/packages/ream/package.json
+++ b/packages/ream/package.json
@@ -5,17 +5,32 @@
   "files": [
     "/dist",
     "/cli.js",
-    "/server"
+    "/*.d.ts"
   ],
-  "main": "dist/index.js",
+  "main": "dist/cjs/index.js",
   "bin": {
     "ream": "cli.js"
   },
   "types": "dist/index.d.ts",
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "require": "./dist/cjs/index.js",
+      "import": "./dist/esm/index.mjs"
+    },
+    "./app": {
+      "require": "./dist/cjs/app.js",
+      "import": "./dist/esm/app.mjs"
+    },
+    "./server": {
+      "require": "./dist/cjs/server.js",
+      "import": "./dist/esm/server.mjs"
+    }
+  },
   "scripts": {
     "test": "echo skip",
-    "dev": "tsup --watch",
-    "build": "tsup"
+    "dev": "rm -rf dist && rollup -c --watch",
+    "build": "rm -rf dist && rollup -c"
   },
   "license": "MIT",
   "author": {
