refactor: use routes instead of pages

--- a/examples/endpoints/package.json
+++ b/examples/endpoints/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "version": "0.0.0",
-  "name": "example-api-routes",
+  "name": "example-endpoints",
   "scripts": {
     "dev": "ream",
     "build": "ream build"
