wip: hackernews example

--- a/examples/export-site/package.json
+++ b/examples/export-site/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "ream",
     "build": "ream build",
+    "export": "ream export",
     "start": "ream start"
   },
   "dependencies": {
